demo-app-depoyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: demo-app
  labels:
    app: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: v1
  template:
    metadata:
      labels:
        app: v1
    spec:
      containers:
      - name: demo-app
        image: gtnpcpacr.azurecr.io/gtnpcp/demo-app:v3
        ports:
        - containerPort: 80
