demo-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-svc
  namespace: demo-app
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: v1
